#1882 fix date input box sizes on safari

--- a/apps/website/src/_styles/custom-element.scss
+++ b/apps/website/src/_styles/custom-element.scss
@@ -38,6 +38,7 @@
 .el-input .el-input__inner {
   border: transparent !important;
   background: transparent !important;
+  width: 75%;
 
   &:focus-visible {
     box-shadow: none;
